parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> devices commands
Rule 2     devices -> device devices
Rule 3     devices -> empty
Rule 4     empty -> <empty>
Rule 5     device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE
Rule 6     device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE
Rule 7     commands -> command PONTO commands
Rule 8     commands -> command PONTO
Rule 9     command -> SET ID IGUAL value
Rule 10    command -> LIGAR ID
Rule 11    command -> DESLIGAR ID
Rule 12    command -> SE condition ENTAO action
Rule 13    command -> SE condition ENTAO action SENAO action
Rule 14    condition -> ID logicop value
Rule 15    condition -> ID logicop value E condition
Rule 16    logicop -> MAIOR
Rule 17    logicop -> MENOR
Rule 18    logicop -> IGUALIGUAL
Rule 19    logicop -> DIF
Rule 20    logicop -> MAIORIGUAL
Rule 21    logicop -> MENORIGUAL
Rule 22    value -> NUM
Rule 23    value -> TRUE
Rule 24    value -> FALSE
Rule 25    action -> LIGAR ID
Rule 26    action -> DESLIGAR ID
Rule 27    action -> ENVIAR ALERTA alert_content ID
Rule 28    action -> ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids
Rule 29    command -> ENVIAR ALERTA alert_content ID
Rule 30    command -> ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids
Rule 31    alert_content -> ABREPAREN STRING VIRG ID FECHAPAREN
Rule 32    alert_content -> ABREPAREN STRING FECHAPAREN
Rule 33    lista_ids -> ID VIRG lista_ids
Rule 34    lista_ids -> ID

Terminals, with rules where they appear

ABRECHAVE            : 5 6
ABREPAREN            : 31 32
ALERTA               : 27 28 29 30
DESLIGAR             : 11 26
DIF                  : 19
DISPOSITIVO          : 5 6
DOISPONTOS           : 5 6 28 30
E                    : 15
ENTAO                : 12 13
ENVIAR               : 27 28 29 30
FALSE                : 24
FECHACHAVE           : 5 6
FECHAPAREN           : 31 32
ID                   : 5 5 6 9 10 11 14 15 25 26 27 29 31 33 34
IGUAL                : 9
IGUALIGUAL           : 18
LIGAR                : 10 25
MAIOR                : 16
MAIORIGUAL           : 20
MENOR                : 17
MENORIGUAL           : 21
NUM                  : 22
PARA                 : 28 30
PONTO                : 7 8
SE                   : 12 13
SENAO                : 13
SET                  : 9
STRING               : 31 32
TODOS                : 28 30
TRUE                 : 23
VIRG                 : 5 31 33
error                : 

Nonterminals, with rules where they appear

action               : 12 13 13
alert_content        : 27 28 29 30
command              : 7 8
commands             : 1 7
condition            : 12 13 15
device               : 2
devices              : 1 2
empty                : 3
lista_ids            : 28 30 33
logicop              : 14 15
program              : 0
value                : 9 14 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . devices commands
    (2) devices -> . device devices
    (3) devices -> . empty
    (5) device -> . DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE
    (6) device -> . DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE
    (4) empty -> .

    DISPOSITIVO     shift and go to state 5
    SET             reduce using rule 4 (empty -> .)
    LIGAR           reduce using rule 4 (empty -> .)
    DESLIGAR        reduce using rule 4 (empty -> .)
    SE              reduce using rule 4 (empty -> .)
    ENVIAR          reduce using rule 4 (empty -> .)

    program                        shift and go to state 1
    devices                        shift and go to state 2
    device                         shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> devices . commands
    (7) commands -> . command PONTO commands
    (8) commands -> . command PONTO
    (9) command -> . SET ID IGUAL value
    (10) command -> . LIGAR ID
    (11) command -> . DESLIGAR ID
    (12) command -> . SE condition ENTAO action
    (13) command -> . SE condition ENTAO action SENAO action
    (29) command -> . ENVIAR ALERTA alert_content ID
    (30) command -> . ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids

    SET             shift and go to state 8
    LIGAR           shift and go to state 9
    DESLIGAR        shift and go to state 10
    SE              shift and go to state 11
    ENVIAR          shift and go to state 12

    commands                       shift and go to state 6
    command                        shift and go to state 7

state 3

    (2) devices -> device . devices
    (2) devices -> . device devices
    (3) devices -> . empty
    (5) device -> . DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE
    (6) device -> . DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE
    (4) empty -> .

    DISPOSITIVO     shift and go to state 5
    SET             reduce using rule 4 (empty -> .)
    LIGAR           reduce using rule 4 (empty -> .)
    DESLIGAR        reduce using rule 4 (empty -> .)
    SE              reduce using rule 4 (empty -> .)
    ENVIAR          reduce using rule 4 (empty -> .)

    device                         shift and go to state 3
    devices                        shift and go to state 13
    empty                          shift and go to state 4

state 4

    (3) devices -> empty .

    SET             reduce using rule 3 (devices -> empty .)
    LIGAR           reduce using rule 3 (devices -> empty .)
    DESLIGAR        reduce using rule 3 (devices -> empty .)
    SE              reduce using rule 3 (devices -> empty .)
    ENVIAR          reduce using rule 3 (devices -> empty .)


state 5

    (5) device -> DISPOSITIVO . DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE
    (6) device -> DISPOSITIVO . DOISPONTOS ABRECHAVE ID FECHACHAVE

    DOISPONTOS      shift and go to state 14


state 6

    (1) program -> devices commands .

    $end            reduce using rule 1 (program -> devices commands .)


state 7

    (7) commands -> command . PONTO commands
    (8) commands -> command . PONTO

    PONTO           shift and go to state 15


state 8

    (9) command -> SET . ID IGUAL value

    ID              shift and go to state 16


state 9

    (10) command -> LIGAR . ID

    ID              shift and go to state 17


state 10

    (11) command -> DESLIGAR . ID

    ID              shift and go to state 18


state 11

    (12) command -> SE . condition ENTAO action
    (13) command -> SE . condition ENTAO action SENAO action
    (14) condition -> . ID logicop value
    (15) condition -> . ID logicop value E condition

    ID              shift and go to state 20

    condition                      shift and go to state 19

state 12

    (29) command -> ENVIAR . ALERTA alert_content ID
    (30) command -> ENVIAR . ALERTA alert_content PARA TODOS DOISPONTOS lista_ids

    ALERTA          shift and go to state 21


state 13

    (2) devices -> device devices .

    SET             reduce using rule 2 (devices -> device devices .)
    LIGAR           reduce using rule 2 (devices -> device devices .)
    DESLIGAR        reduce using rule 2 (devices -> device devices .)
    SE              reduce using rule 2 (devices -> device devices .)
    ENVIAR          reduce using rule 2 (devices -> device devices .)


state 14

    (5) device -> DISPOSITIVO DOISPONTOS . ABRECHAVE ID VIRG ID FECHACHAVE
    (6) device -> DISPOSITIVO DOISPONTOS . ABRECHAVE ID FECHACHAVE

    ABRECHAVE       shift and go to state 22


state 15

    (7) commands -> command PONTO . commands
    (8) commands -> command PONTO .
    (7) commands -> . command PONTO commands
    (8) commands -> . command PONTO
    (9) command -> . SET ID IGUAL value
    (10) command -> . LIGAR ID
    (11) command -> . DESLIGAR ID
    (12) command -> . SE condition ENTAO action
    (13) command -> . SE condition ENTAO action SENAO action
    (29) command -> . ENVIAR ALERTA alert_content ID
    (30) command -> . ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids

    $end            reduce using rule 8 (commands -> command PONTO .)
    SET             shift and go to state 8
    LIGAR           shift and go to state 9
    DESLIGAR        shift and go to state 10
    SE              shift and go to state 11
    ENVIAR          shift and go to state 12

    command                        shift and go to state 7
    commands                       shift and go to state 23

state 16

    (9) command -> SET ID . IGUAL value

    IGUAL           shift and go to state 24


state 17

    (10) command -> LIGAR ID .

    PONTO           reduce using rule 10 (command -> LIGAR ID .)


state 18

    (11) command -> DESLIGAR ID .

    PONTO           reduce using rule 11 (command -> DESLIGAR ID .)


state 19

    (12) command -> SE condition . ENTAO action
    (13) command -> SE condition . ENTAO action SENAO action

    ENTAO           shift and go to state 25


state 20

    (14) condition -> ID . logicop value
    (15) condition -> ID . logicop value E condition
    (16) logicop -> . MAIOR
    (17) logicop -> . MENOR
    (18) logicop -> . IGUALIGUAL
    (19) logicop -> . DIF
    (20) logicop -> . MAIORIGUAL
    (21) logicop -> . MENORIGUAL

    MAIOR           shift and go to state 27
    MENOR           shift and go to state 28
    IGUALIGUAL      shift and go to state 29
    DIF             shift and go to state 30
    MAIORIGUAL      shift and go to state 31
    MENORIGUAL      shift and go to state 32

    logicop                        shift and go to state 26

state 21

    (29) command -> ENVIAR ALERTA . alert_content ID
    (30) command -> ENVIAR ALERTA . alert_content PARA TODOS DOISPONTOS lista_ids
    (31) alert_content -> . ABREPAREN STRING VIRG ID FECHAPAREN
    (32) alert_content -> . ABREPAREN STRING FECHAPAREN

    ABREPAREN       shift and go to state 34

    alert_content                  shift and go to state 33

state 22

    (5) device -> DISPOSITIVO DOISPONTOS ABRECHAVE . ID VIRG ID FECHACHAVE
    (6) device -> DISPOSITIVO DOISPONTOS ABRECHAVE . ID FECHACHAVE

    ID              shift and go to state 35


state 23

    (7) commands -> command PONTO commands .

    $end            reduce using rule 7 (commands -> command PONTO commands .)


state 24

    (9) command -> SET ID IGUAL . value
    (22) value -> . NUM
    (23) value -> . TRUE
    (24) value -> . FALSE

    NUM             shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    value                          shift and go to state 36

state 25

    (12) command -> SE condition ENTAO . action
    (13) command -> SE condition ENTAO . action SENAO action
    (25) action -> . LIGAR ID
    (26) action -> . DESLIGAR ID
    (27) action -> . ENVIAR ALERTA alert_content ID
    (28) action -> . ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids

    LIGAR           shift and go to state 41
    DESLIGAR        shift and go to state 42
    ENVIAR          shift and go to state 43

    action                         shift and go to state 40

state 26

    (14) condition -> ID logicop . value
    (15) condition -> ID logicop . value E condition
    (22) value -> . NUM
    (23) value -> . TRUE
    (24) value -> . FALSE

    NUM             shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    value                          shift and go to state 44

state 27

    (16) logicop -> MAIOR .

    NUM             reduce using rule 16 (logicop -> MAIOR .)
    TRUE            reduce using rule 16 (logicop -> MAIOR .)
    FALSE           reduce using rule 16 (logicop -> MAIOR .)


state 28

    (17) logicop -> MENOR .

    NUM             reduce using rule 17 (logicop -> MENOR .)
    TRUE            reduce using rule 17 (logicop -> MENOR .)
    FALSE           reduce using rule 17 (logicop -> MENOR .)


state 29

    (18) logicop -> IGUALIGUAL .

    NUM             reduce using rule 18 (logicop -> IGUALIGUAL .)
    TRUE            reduce using rule 18 (logicop -> IGUALIGUAL .)
    FALSE           reduce using rule 18 (logicop -> IGUALIGUAL .)


state 30

    (19) logicop -> DIF .

    NUM             reduce using rule 19 (logicop -> DIF .)
    TRUE            reduce using rule 19 (logicop -> DIF .)
    FALSE           reduce using rule 19 (logicop -> DIF .)


state 31

    (20) logicop -> MAIORIGUAL .

    NUM             reduce using rule 20 (logicop -> MAIORIGUAL .)
    TRUE            reduce using rule 20 (logicop -> MAIORIGUAL .)
    FALSE           reduce using rule 20 (logicop -> MAIORIGUAL .)


state 32

    (21) logicop -> MENORIGUAL .

    NUM             reduce using rule 21 (logicop -> MENORIGUAL .)
    TRUE            reduce using rule 21 (logicop -> MENORIGUAL .)
    FALSE           reduce using rule 21 (logicop -> MENORIGUAL .)


state 33

    (29) command -> ENVIAR ALERTA alert_content . ID
    (30) command -> ENVIAR ALERTA alert_content . PARA TODOS DOISPONTOS lista_ids

    ID              shift and go to state 45
    PARA            shift and go to state 46


state 34

    (31) alert_content -> ABREPAREN . STRING VIRG ID FECHAPAREN
    (32) alert_content -> ABREPAREN . STRING FECHAPAREN

    STRING          shift and go to state 47


state 35

    (5) device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID . VIRG ID FECHACHAVE
    (6) device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID . FECHACHAVE

    VIRG            shift and go to state 48
    FECHACHAVE      shift and go to state 49


state 36

    (9) command -> SET ID IGUAL value .

    PONTO           reduce using rule 9 (command -> SET ID IGUAL value .)


state 37

    (22) value -> NUM .

    PONTO           reduce using rule 22 (value -> NUM .)
    E               reduce using rule 22 (value -> NUM .)
    ENTAO           reduce using rule 22 (value -> NUM .)


state 38

    (23) value -> TRUE .

    PONTO           reduce using rule 23 (value -> TRUE .)
    E               reduce using rule 23 (value -> TRUE .)
    ENTAO           reduce using rule 23 (value -> TRUE .)


state 39

    (24) value -> FALSE .

    PONTO           reduce using rule 24 (value -> FALSE .)
    E               reduce using rule 24 (value -> FALSE .)
    ENTAO           reduce using rule 24 (value -> FALSE .)


state 40

    (12) command -> SE condition ENTAO action .
    (13) command -> SE condition ENTAO action . SENAO action

    PONTO           reduce using rule 12 (command -> SE condition ENTAO action .)
    SENAO           shift and go to state 50


state 41

    (25) action -> LIGAR . ID

    ID              shift and go to state 51


state 42

    (26) action -> DESLIGAR . ID

    ID              shift and go to state 52


state 43

    (27) action -> ENVIAR . ALERTA alert_content ID
    (28) action -> ENVIAR . ALERTA alert_content PARA TODOS DOISPONTOS lista_ids

    ALERTA          shift and go to state 53


state 44

    (14) condition -> ID logicop value .
    (15) condition -> ID logicop value . E condition

    ENTAO           reduce using rule 14 (condition -> ID logicop value .)
    E               shift and go to state 54


state 45

    (29) command -> ENVIAR ALERTA alert_content ID .

    PONTO           reduce using rule 29 (command -> ENVIAR ALERTA alert_content ID .)


state 46

    (30) command -> ENVIAR ALERTA alert_content PARA . TODOS DOISPONTOS lista_ids

    TODOS           shift and go to state 55


state 47

    (31) alert_content -> ABREPAREN STRING . VIRG ID FECHAPAREN
    (32) alert_content -> ABREPAREN STRING . FECHAPAREN

    VIRG            shift and go to state 56
    FECHAPAREN      shift and go to state 57


state 48

    (5) device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG . ID FECHACHAVE

    ID              shift and go to state 58


state 49

    (6) device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE .

    DISPOSITIVO     reduce using rule 6 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE .)
    SET             reduce using rule 6 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE .)
    LIGAR           reduce using rule 6 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE .)
    DESLIGAR        reduce using rule 6 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE .)
    SE              reduce using rule 6 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE .)
    ENVIAR          reduce using rule 6 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID FECHACHAVE .)


state 50

    (13) command -> SE condition ENTAO action SENAO . action
    (25) action -> . LIGAR ID
    (26) action -> . DESLIGAR ID
    (27) action -> . ENVIAR ALERTA alert_content ID
    (28) action -> . ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids

    LIGAR           shift and go to state 41
    DESLIGAR        shift and go to state 42
    ENVIAR          shift and go to state 43

    action                         shift and go to state 59

state 51

    (25) action -> LIGAR ID .

    SENAO           reduce using rule 25 (action -> LIGAR ID .)
    PONTO           reduce using rule 25 (action -> LIGAR ID .)


state 52

    (26) action -> DESLIGAR ID .

    SENAO           reduce using rule 26 (action -> DESLIGAR ID .)
    PONTO           reduce using rule 26 (action -> DESLIGAR ID .)


state 53

    (27) action -> ENVIAR ALERTA . alert_content ID
    (28) action -> ENVIAR ALERTA . alert_content PARA TODOS DOISPONTOS lista_ids
    (31) alert_content -> . ABREPAREN STRING VIRG ID FECHAPAREN
    (32) alert_content -> . ABREPAREN STRING FECHAPAREN

    ABREPAREN       shift and go to state 34

    alert_content                  shift and go to state 60

state 54

    (15) condition -> ID logicop value E . condition
    (14) condition -> . ID logicop value
    (15) condition -> . ID logicop value E condition

    ID              shift and go to state 20

    condition                      shift and go to state 61

state 55

    (30) command -> ENVIAR ALERTA alert_content PARA TODOS . DOISPONTOS lista_ids

    DOISPONTOS      shift and go to state 62


state 56

    (31) alert_content -> ABREPAREN STRING VIRG . ID FECHAPAREN

    ID              shift and go to state 63


state 57

    (32) alert_content -> ABREPAREN STRING FECHAPAREN .

    ID              reduce using rule 32 (alert_content -> ABREPAREN STRING FECHAPAREN .)
    PARA            reduce using rule 32 (alert_content -> ABREPAREN STRING FECHAPAREN .)


state 58

    (5) device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID . FECHACHAVE

    FECHACHAVE      shift and go to state 64


state 59

    (13) command -> SE condition ENTAO action SENAO action .

    PONTO           reduce using rule 13 (command -> SE condition ENTAO action SENAO action .)


state 60

    (27) action -> ENVIAR ALERTA alert_content . ID
    (28) action -> ENVIAR ALERTA alert_content . PARA TODOS DOISPONTOS lista_ids

    ID              shift and go to state 65
    PARA            shift and go to state 66


state 61

    (15) condition -> ID logicop value E condition .

    ENTAO           reduce using rule 15 (condition -> ID logicop value E condition .)


state 62

    (30) command -> ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS . lista_ids
    (33) lista_ids -> . ID VIRG lista_ids
    (34) lista_ids -> . ID

    ID              shift and go to state 68

    lista_ids                      shift and go to state 67

state 63

    (31) alert_content -> ABREPAREN STRING VIRG ID . FECHAPAREN

    FECHAPAREN      shift and go to state 69


state 64

    (5) device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE .

    DISPOSITIVO     reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE .)
    SET             reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE .)
    LIGAR           reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE .)
    DESLIGAR        reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE .)
    SE              reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE .)
    ENVIAR          reduce using rule 5 (device -> DISPOSITIVO DOISPONTOS ABRECHAVE ID VIRG ID FECHACHAVE .)


state 65

    (27) action -> ENVIAR ALERTA alert_content ID .

    SENAO           reduce using rule 27 (action -> ENVIAR ALERTA alert_content ID .)
    PONTO           reduce using rule 27 (action -> ENVIAR ALERTA alert_content ID .)


state 66

    (28) action -> ENVIAR ALERTA alert_content PARA . TODOS DOISPONTOS lista_ids

    TODOS           shift and go to state 70


state 67

    (30) command -> ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids .

    PONTO           reduce using rule 30 (command -> ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids .)


state 68

    (33) lista_ids -> ID . VIRG lista_ids
    (34) lista_ids -> ID .

    VIRG            shift and go to state 71
    PONTO           reduce using rule 34 (lista_ids -> ID .)
    SENAO           reduce using rule 34 (lista_ids -> ID .)


state 69

    (31) alert_content -> ABREPAREN STRING VIRG ID FECHAPAREN .

    ID              reduce using rule 31 (alert_content -> ABREPAREN STRING VIRG ID FECHAPAREN .)
    PARA            reduce using rule 31 (alert_content -> ABREPAREN STRING VIRG ID FECHAPAREN .)


state 70

    (28) action -> ENVIAR ALERTA alert_content PARA TODOS . DOISPONTOS lista_ids

    DOISPONTOS      shift and go to state 72


state 71

    (33) lista_ids -> ID VIRG . lista_ids
    (33) lista_ids -> . ID VIRG lista_ids
    (34) lista_ids -> . ID

    ID              shift and go to state 68

    lista_ids                      shift and go to state 73

state 72

    (28) action -> ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS . lista_ids
    (33) lista_ids -> . ID VIRG lista_ids
    (34) lista_ids -> . ID

    ID              shift and go to state 68

    lista_ids                      shift and go to state 74

state 73

    (33) lista_ids -> ID VIRG lista_ids .

    PONTO           reduce using rule 33 (lista_ids -> ID VIRG lista_ids .)
    SENAO           reduce using rule 33 (lista_ids -> ID VIRG lista_ids .)


state 74

    (28) action -> ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids .

    SENAO           reduce using rule 28 (action -> ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids .)
    PONTO           reduce using rule 28 (action -> ENVIAR ALERTA alert_content PARA TODOS DOISPONTOS lista_ids .)

